Tests - more cases

--- a/tests/expected/method-tag.html
+++ b/tests/expected/method-tag.html
@@ -1,1 +1,4 @@
 <input type="hidden" name="_method" value="PUT">
+<input type="hidden" name="_method" value="DELETE">
+<input type="hidden" name="_method" value="patch">
+<input type="hidden" name="_method" value="PUT">
