--- a/tests/expected/n-href-tag.html
+++ b/tests/expected/n-href-tag.html
@@ -13,3 +13,5 @@
 <a href="http://localhost/test/detail/147?foo=bar&amp;lang=cs&amp;x=1" class="foo">Click me</a>
 <a href="http://localhost/test/detail/1?foo=bar&amp;lang=cs" class="foo">Click me</a>
 <a href="http://localhost/test/detail/1?foo=bar&amp;lang=cs" class="foo">Click me</a>
+<a href="http://localhost/test/detail" class="foo">Click me</a>
+<a href="http://localhost/test/detail/1?foo=bar&amp;lang=cs" class="foo">Click me</a>
