--- a/tests/expected/implemented.html
+++ b/tests/expected/implemented.html
@@ -1,10 +1,20 @@
-Hello Bar
-        2
-        4
-        6
-        8
-        10
-<div>x is true</div>
+<!doctype html>
+<html lang="en">
+<head>
+    <title>Layout</title>
+</head>
+<body>
+
+    Hello Bar
+            2
+            4
+            6
+            8
+            10
+
+    <div>x is true</div>
 
 
-    <p>This is my block with some variable foobar</p>
+        <p>This is my block with some variable foobar</p>
+</body>
+</html>
