--- a/tests/expected/translation-tag-en.html
+++ b/tests/expected/translation-tag-en.html
@@ -1,7 +1,10 @@
 Welcome to our application!
+Welcome to our application!
 The action was completed successfully.
 Hello JOHN
+Hello MARRY
 Goodbye Tom
+Goodbye Jane
 There is one apple
 There are many apples
 There are many apples
