--- a/tests/expected/translation-tag-cs.html
+++ b/tests/expected/translation-tag-cs.html
@@ -1,7 +1,10 @@
 Vítejte v naší aplikaci!
+Vítejte v naší aplikaci!
 Akce byla úspěšně dokončena.
 Ahoj JOHN
+Ahoj MARRY
 Nashledanou Tom
+Nashledanou Jane
 Je tam jedno jablko
 Je tam několik jablek
 Je tam několik jablek
