Tag {method} - parameter null will not render the input

--- a/tests/expected/method-tag.xhtml
+++ b/tests/expected/method-tag.xhtml
@@ -2,3 +2,6 @@
 <input type="hidden" name="_method" value="DELETE" />
 <input type="hidden" name="_method" value="patch" />
 <input type="hidden" name="_method" value="PUT" />
+<input type="hidden" name="_method" value="unsupported" />
+<input type="hidden" name="_method" value="GET" />
+<input type="hidden" name="_method" value="POST" />
